fix: Char list public icon alignment

--- a/src/app/pages/char-list.component.scss
+++ b/src/app/pages/char-list.component.scss
@@ -6,5 +6,5 @@
 }
 
 td.public-icon {
-	vertical-align: top;
+	vertical-align: middle;
 }
